--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ a{
 }
 
 div{
-	background-color:white;
+	background-color:rgb(255, 255, 255);
 	padding:10px;
 	border:2px solid black;
 	border-radius:7px;
